# ADK-IDE-crash-course

./: .gitignore  README.md  __init__.py  agent_and_agent_as_tools2.py  agent_and_agents_as_tools.py  agent_and_cusom_weather_tool.py  agent_and_custom_weather_tool.py  agent_and_search_tool.py  agent_query.py  agent_with_and_without_memory.py  agent_with_memory_adaptive_planner.py  agents.py  billing_enablement.py  mypy.ini  pyproject.toml  routed_agents_v1.py  routed_agents_v2.py  routed_agents_v3.py  routing_agent_v01.py  routing_agent_v02.py  routing_agent_v03.py  routing_agent_v1.py  routing_agent_v2.py  routing_agent_v3.py  routing_agents1.py  set_env.sh
Agents/: .__init__.py  agent_and_agents_as_tools.py  agent_and_wrapped_agents_as_tools.py  agent_query.py  agent_with_and_without_memory.py  agent_with_memory_adaptive_planner.py  agent_with_search_tool.py  agent_with_weather_tool.py  agent_without_memory.py  agents.py
agent_routers/: __init__.py  agent_query.py  routed_agents_v1.py  routed_agents_v3.py  routing_agent_v1.py  routing_agent_v2.py  routing_agent_v3.py  sequence_agents.py  sequence_routing.py  sequential_agent_agents.py  sequential_agent_routing.py  ultimate_agents.py  ultimate_routing.py
